--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "hbs": "^4.0.1",
+    "moment": "^2.15.1",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
